<resources>
    <string name="app_name" translatable="false">PICLY</string>
    <string name="bottom_album">내 앨범</string>
    <string name="bottom_setting">설정</string>
    <string name="app_title" translatable="false">PICLY</string>
    <string name="app_settings_title">설정</string>
    <string name="multiple_picture" translatable="false">multiple_picture</string>
    <string name="link" translatable="false">link</string>
    <string name="login_title">로그인</string>
    <string name="login_info_text">로그인하고 나의 사진을 공유하세요 \n공유된 사진에는 내 정보가 저장되지 않아요</string>


    <string name="error_invalid_custom_token">사용자 지정 토큰 형식이 잘못되었습니다. 문서를 확인하세요.</string>
    <string name="error_custom_token_mismatch">사용자 지정 토큰이 다른 대상과 일치하지 않습니다.</string>
    <string name="error_invalid_credential">이메일 혹은 비밀번호가 일치하지 않습니다.</string>
    <string name="error_invalid_email">이메일 주소의 형식이 잘못되었습니다.</string>
    <string name="error_wrong_password">비밀번호가 잘못되었거나 사용자에게 비밀번호가 없습니다.</string>
    <string name="error_user_mismatch">제공된 자격 증명이 이전에 로그인한 사용자와 일치하지 않습니다.</string>
    <string name="error_requires_recent_login">이 작업은 민감하며 최근에 인증이 필요합니다. 이 요청을 다시 시도하기 전에 다시 로그인하세요.</string>
    <string name="error_account_exists_with_different_credential">동일한 이메일 주소를 사용하는 계정이 이미 다른 로그인 자격 증명으로 존재합니다. 이 이메일 주소와 관련된 제공자를 사용하여 로그인하세요.</string>
    <string name="error_email_already_in_use">이 이메일 주소는 이미 다른 계정에서 사용 중입니다.</string>
    <string name="error_credential_already_in_use">이 자격 증명은 이미 다른 사용자 계정에 연결되어 있습니다.</string>
    <string name="error_user_disabled">사용자 계정이 관리자에 의해 비활성화 되었습니다.</string>
    <string name="error_user_token_expired">사용자 자격 증명이 더 이상 유효하지 않습니다. 사용자는 다시 로그인해야 합니다.</string>
    <string name="error_user_not_found">이 식별자에 해당하는 사용자 레코드가 없습니다. 사용자가 삭제되었을 수 있습니다.</string>
    <string name="error_invalid_user_token">사용자 자격 증명이 더 이상 유효하지 않습니다. 사용자는 다시 로그인해야 합니다.</string>
    <string name="error_operation_not_allowed">이 작업은 허용되지 않습니다. 콘솔에서 이 서비스를 활성화해야 합니다.</string>
    <string name="error_weak_password">비밀번호는 6자 이상이어야 합니다.</string>
    <string name="error_missing_email">이메일 주소를 제공해야 합니다.</string>
    <string name="error_email_empty">이메일을 입력해주세요.</string>
    <string name="error_password_empty">비밀번호를 입력해주세요.</string>
    <string name="error_unknown">알 수 없는 오류가 발생하였습니다.</string>

    <string name="google_login">Google로 로그인</string>
    <string name="apple_login">Apple로 로그인</string>
    <string name="email_login">이메일로 로그인</string>
    <string name="login_email_text"><u>이메일로 로그인</u></string>
    <string name="login_warning">위의 “Google/Apple/이메일로 로그인”을 클릭하면 \n이용약관 및 개인정보처리방침을 읽고 이해했으며, \n그에 동의하는 것으로 간주됩니다.\n</string>
    <string name="terms_of_service">이용약관</string>
    <string name="privacy_policy">개인정보처리방침</string>
    <string name="back_button" translatable="false">backButton</string>
    <string name="sign_up">회원가입</string>
    <string name="email_text">이메일</string>
    <string name="email_hint">이메일을 입력하세요</string>
    <string name="password_text">비밀번호</string>
    <string name="password_hint">비밀번호를 입력하세요</string>
    <string name="floating_action_button" translatable="false">FAB</string>
    <string name="upload_album_title">앨범 업로드</string>
    <string name="success">완료</string>
    <string name="tag">태그</string>
    <string name="tag_hint">태그를 입력하세요</string>
    <string name="close" translatable="false">Close</string>
    <string name="image">사진</string>
    <string name="image_add" translatable="false">ImageAdd</string>
    <string name="gallery_cancel">취소</string>
    <string name="gallery_add">추가</string>
    <string name="no_items">갤러리에 사진이 없습니다.</string>
    <string name="over_selected">사진은 최대 10개까지 선택 가능합니다.</string>
    <string name="image_pick_state">사진 선택</string>
    <string name="delete">삭제</string>
    <string name="expireDate">만료 기한</string>
    <string name="upload_warning">
        다른 사용자의 창작물이나 지적 재산권을 존중해주세요. \n무단으로 타인의 작품을 사용하는 행위는 금지되어 있습니다. \n선정적이거나 모욕적인 이미지, 비속어 포함한 내용은 업로드하지 말아주세요. \n타인의 개인정보가 노출되지 않도록 주의해주세요.
    </string>
    <string name="album">앨범</string>
    <string name="back" translatable="false">Back</string>
    <string name="gallery_album_title">앨범 이름</string>

    <string name="gallery_alert_title">이동하시겠습니까?</string>
    <string name="gallery_alert_message">선택 사항이 저장되지 않습니다.</string>
    <string name="gallery_alert_continue">계속</string>
    <string name="gallery_alert_cancel">뒤로 가기</string>
    <string name="detail_info_title">상세정보</string>
    <string name="more" translatable="false">more</string>
    <string name="viewCount">조회수</string>

    <string name="no_select_image">선택된 이미지가 없습니다.</string>
    <string name="link_copy">링크가 복사되었습니다.</string>
    <string name="cancel">취소</string>
    <string name="share">공유</string>
    <string name="menu">메뉴</string>
    <string name="dialog_delete_title">앨범 삭제</string>
    <string name="dialog_delete_message">정말로 삭제하시겠습니까?</string>

    <string name="dialog_gallery_permission_title">권한 설정</string>
    <string name="dialog_gallery_permission_message">파일 및 미디어 접근을 위해 앱 설정에서 권한을 설정해 주세요.</string>
    <string name="dialog_gallery_permission_positive">앱 설정</string>
    <string name="dialog_gallery_permission_negative">창 닫기</string>

    <string name="dialog_upload_title">업로드 완료</string>
    <string name="dialog_upload_message">링크를 복사하시겠습니까?</string>
    <string name="dialog_upload_positive">링크 복사하고 창 닫기</string>
    <string name="dialog_upload_negative">창 닫기</string>

    <string name="setting_account">계정 관리</string>
    <string name="setting_tutorial">튜토리얼 보기</string>
    <string name="setting_terms_of_service">이용약관</string>
    <string name="setting_privacy_policy">개인정보 처리방침</string>
    <string name="setting_opensource_license">오픈소스 라이센스</string>
    <string name="setting_developer">개발자 정보</string>
    <string name="setting_version">버전</string>

    <string name="onboarding_skip"><u>건너뛰기</u></string>
    <string name="onboarding">onboarding</string>
    <string name="onboarding_title_share">손쉬운 익명 사진 공유</string>
    <string name="onboarding_message_share">
        PICLY는 사진을 빠르고 안전하게 공유하는
        \n새로운 방법입니다.
        \n익명으로 사진을 업로드하고,
        \n링크를 통해 손쉽게 공유하세요.
    </string>
    <string name="onboarding_title_anonymity">보장되는 익명성</string>
    <string name="onboarding_message_anonymity">
        공유된 링크를 통해 앨범에 접속한 사용자는
        \n작성자의 정보를 확인할 수 없습니다.\n
        \n나를 밝히지 않고 사진을 전달하고 싶다면,
        \nPICLY가 최적의 선택지입니다.
    </string>
    <string name="onboarding_title_expired_album">자동으로 만료되는 앨범</string>
    <string name="onboarding_expired_album">
        앨범을 게시할 때는 만료시간을 설정하세요.\n
        \n만료시간 이후에 링크는 자동으로 만료되며,
        \n본인만 앨범을 확인할 수 있습니다.\n
        \n이제는 더욱 편하게 앨범을 관리하세요.
    </string>
    <string name="onboarding_button_next">다음</string>
    <string name="onboarding_button_start">시작하기</string>

    <string name="account_title">계정 관리</string>
    <string name="account_logout">로그아웃</string>
    <string name="account_delete">회원탈퇴</string>
    <string name="account_email">이메일</string>
    <string name="account_creation_time">가입일</string>
    <string name="account_login_info">로그인 정보</string>
    <string name="dialog_logout_title">로그아웃</string>
    <string name="dialog_logout_message">로그아웃하시겠습니까?</string>
    <string name="dialog_delete_user_title">재인증</string>
    <string name="dialog_delete_user_message">계정 탈퇴를 위해서는 재인증이 필요합니다.\n재인증하시겠습니까?</string>
    <string name="recertification">재인증</string>
    <string name="shimmer" translatable="false">shimmer</string>
    <string name="search_tag">태그 검색</string>
    <string name="splash" translatable="false">splash</string>
    <string name="no_search_text">검색 결과가 없습니다.</string>
    <string name="ready">준비 중입니다.</string>
    <string name="no_data_text">
        업로드한 앨범이 없습니다.\n
        +버튼을 눌러 앨범을 업로드하고 공유해보세요.
    </string>
    <string name="incoming_image_error">이미지를 불러오는데 실패하였습니다.</string>
    <string name="check_permission_message">앱 설정에서 권한을 설정해 주세요.</string>
    <string name="detail_image" translatable="false">detail_image</string>
    <string name="save">저장</string>
    <string name="save_to_image_success">이미지가 저장되었습니다.</string>
    <string name="save_to_image_failure">이미지 저장에 실패하였습니다.</string>

    <string name="auth_provider">%s로 로그인</string>
</resources>