<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
    >
        <ImageView
            android:id="@+id/onboardingImageView"
            android:layout_width="294dp"
            android:layout_height="294dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/image_onboarding_share"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/onboarding" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:text="@string/onboarding_title_share"
            android:textSize="24sp"
            android:textColor="@color/mainText"
            android:fontFamily="@font/sf_pro"
        />
        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/onboarding_message_share"
            android:textSize="16sp"
            android:textColor="@color/mainText"
        />
    </LinearLayout>
</layout>
