<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.user.LoginActivity"
            android:background="@color/mainBackground"
            android:orientation="vertical"
        >
            <include layout="@layout/toolbar_main" android:id="@+id/toolbar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_info_text"
                android:textColor="@color/mainText"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="24dp"
            />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/googleButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/googleColor"
                android:drawableStart="@drawable/icon_google"
                android:gravity="center"
                android:paddingHorizontal="2dp"
                android:layout_margin="24dp"
                android:paddingEnd="52dp"
                android:text="@string/google_login"
                android:textColor="@color/googleTextColor"
                android:textAllCaps="false"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/emailButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/mainText"
                android:drawableStart="@drawable/logo_email"
                android:gravity="center"
                android:paddingHorizontal="2dp"
                android:layout_marginHorizontal="24dp"
                android:paddingEnd="52dp"
                android:text="@string/email_login"
                android:textColor="@color/collectionViewCellBackground"
                android:textAllCaps="false"
                tools:ignore="RtlSymmetry" />
<!--            <androidx.appcompat.widget.AppCompatButton-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="56dp"-->
<!--                android:background="@drawable/button_shape"-->
<!--                android:backgroundTint="@color/appleColor"-->
<!--                android:drawableStart="@drawable/icon_apple"-->
<!--                android:gravity="center"-->
<!--                android:paddingHorizontal="12dp"-->
<!--                android:layout_marginHorizontal="24dp"-->
<!--                android:paddingEnd="52dp"-->
<!--                android:text="@string/apple_login"-->
<!--                android:textColor="@color/appleTextColor"-->
<!--                android:textAllCaps="false"-->
<!--                tools:ignore="RtlSymmetry" />-->

<!--            <TextView-->
<!--                android:id="@+id/emailTextView"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="80dp"-->
<!--                android:text="@string/login_email_text"-->
<!--                android:textColor="@color/secondText"-->
<!--                android:layout_marginHorizontal="24dp"-->
<!--                android:paddingVertical="12dp"-->
<!--            />-->

        </LinearLayout>

        <TextView
            android:id="@+id/loginWarningTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/login_warning"
            android:textColor="@color/secondText"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
